# J.A.R.V.I.S

./: .env.example  .gitignore  CONFIGURACION.md  Cargo.toml  README.md  config.yaml
scripts/: kill_orphans.ps1  setup.ps1  setup.sh  setup_python_env.ps1  setup_python_env.sh
src/: config.rs  echo_gate.rs  errors.rs  http.rs  main.rs  orchestrator.rs  startup_checks.rs  wake.rs
src/agent/: confirm.rs  mod.rs  relevance.rs  turn.rs
src/audio/: mod.rs  music.rs  player.rs
src/habits/: mod.rs
src/ipc/: console_handler.rs  framing.rs  job_object.rs  mod.rs  process.rs  watchdog.rs
src/llm/: anthropic.rs  decode.rs  deepseek.rs  lmstudio.rs  mod.rs  model_select.rs  ollama.rs  openai.rs  openai_compatible.rs
src/memory/: mod.rs
src/pipeline/: mod.rs  streaming.rs
src/reminders/: mod.rs
src/stt/: asr.rs  capture.rs  clap.rs  engine.rs  events.rs  mod.rs  protocol.rs  vad.rs
src/text/: action_claim.rs  mod.rs  sanitize.rs  sentence_splitter.rs
src/tools/: apps.rs  files.rs  habits.rs  input.rs  media.rs  memory.rs  mod.rs  music.rs  reminders.rs  screen.rs  scripted.rs  scripted_store.rs  shell.rs  silence.rs  system_info.rs  translate.rs  volume.rs  web.rs
src/tts/: cartesia.rs  elevenlabs.rs  mod.rs  piper_worker.rs  protocol.rs
src/tui/: hud.rs  mod.rs  state.rs  theme.rs  wave.rs
workers/: README.md  clap_detector.py  hardware_detect.py  ipc.py  requirements.txt  stt_engine.py  stt_worker.py  tts_worker.py
