[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.29"
thiserror = "2.0"
cpal = "0.18"
ringbuf = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
regex = "1"
