[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs", "signal"] }
tokio-util = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.29"
thiserror = "2.0"
cpal = "0.18"
ringbuf = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = "0.4"
sysinfo = "0.33"
starship-battery = "0.10"
rand = "0.8"
walkdir = "2"
scraper = "0.22"
url = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
base64 = "0.22"
futures-util = "0.3"
xcap = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
